--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node 8bbot.js"
   },
   "author": "Stuart Hobson",
-  "license": "ISC",
+  "license": "My code is free to use",
   "dependencies": {
     "discord.js": "^12.5.3",
     "dotenv": "^10.0.0",
