--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "npm": "*"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node 8bbot.js"
+    "start": "node server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Stuart Hobson",
   "license": "My code is free to use",
