--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "npm": "*"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "node 8bbot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Stuart Hobson",
