--- a/package.json
+++ b/package.json
@@ -1,20 +1,16 @@
 {
   "name": "8ballbot",
-  "version": "1.0.0.",
+  "version": "14.17.3.",
   "description": "Magic 8 Ball",
   "main": "8bbot.js",
-  "engines": {
-    "node": "14.17.3",
-    "npm": "*"
-  },
   "scripts": {
-    "start": "node 8bbot.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node 8bbot.js"
   },
   "author": "Stuart Hobson",
-  "license": "This code is free to use",
+  "license": "This code is free",
   "dependencies": {
-    "discord.js": "^12.5.3",
+    "discord.js": "^13.0.1",
     "dotenv": "^10.0.0",
     "pm2": "^5.1.0"
   },
